# ai_flow

./: .commitlintrc.json  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .tflint.hcl  Brewfile  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  sonar-project.properties
.claude/: settings.json
.claude/commands/: pm-user-stories.md  project-outliner.md  terraform-stack.md  test-plan-engineer.md
.github/workflows/: ci.yml
docs/: architecture.mmd  system-overview.mmd
docs/adrs/: ADR-0001-workflow-state.md  ADR-0002-temporal-choice.md  ADR-0003-repo-context.md  ADR-0004-language-choice.md
infra/spacelift/: Taskfile.yaml
infra/spacelift/shared/: locals.tf  main.tf  providers.tf
libs/ai-flow/: README.md  pyproject.toml
libs/ai-flow/src/ai_flow/: __init__.py  phases.py  workflow.py
libs/ai-flow/src/ai_flow/phases/: __init__.py  backlog.py  completed.py  implementation.py  implementation_approval.py  plan_approval.py  planning.py  test_approval.py  test_implementation.py  test_plan_approval.py  test_planning.py
libs/ai-flow/tests/: test_concrete_phases.py  test_phase.py  test_workflow.py
