[project]
name = "ai-flow"
version = "0.1.0"
description = "Core shared library for the ai_flow workflow system"
readme = "README.md"
license = "ISC"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_flow"]
